# ADA

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  rust-toolchain.toml  test_output.txt
.claude/agents/: cpp-test-engineer.md  developer.md  existing-docs-flight-recorder-concept-reviewer.md  iteration-planner.md  tester.md
.github/badges/: cpp-coverage.json  integration-score.json  rust-coverage.json
.github/workflows/: badges.yml  pr-validation.yml  quality-gate.yml  release.yml
ada-build-local/.claude-plugin/: plugin.json
ada-build-local/.claude-plugin/skills/trace/: SKILL.md  troubleshooting.md  xcode-guide.md
ada-capture/macos/AdaCapture/AdaCapture/: CaptureViewModel.swift  ContentView.swift
ada-cli/: Cargo.toml  build.rs
ada-cli/src/: capture.rs  ffi.rs  main.rs  symbols.rs  trace.rs
claude/commands/: analyze.md
claude/skills/analyze/: SKILL.md
claude/skills/run/: SKILL.md
docs/business/: BUSINESS_ANALYSIS.md
docs/design/user_stories/: ada-claude-integration.md
docs/features/: CPP_REGISTRY_MIGRATION.md
docs/progress_trackings/: manifest.json
docs/progress_trackings/M1_NATIVE_AGENT_MVP/: M1_ITERATION_BREAKDOWN.md  M1_NATIVE_AGENT_MVP.md  manifest.json
docs/progress_trackings/M1_NATIVE_AGENT_MVP/M1_E1_NATIVE_AGENT_INJECTION/: M1_E1_NATIVE_AGENT_INJECTION.md  manifest.json
docs/progress_trackings/M1_NATIVE_AGENT_MVP/M1_E2_INDEX_PIPELINE/: manifest.json
docs/progress_trackings/M1_NATIVE_AGENT_MVP/M1_E3_HARDENING/: manifest.json
docs/progress_trackings/M1_NATIVE_AGENT_MVP/M1_E4_QUERY_ENGINE/: manifest.json
docs/progress_trackings/M1_NATIVE_AGENT_MVP/M1_E5_ATF_V2/: M1_E5_ATF_V2.md
docs/progress_trackings/M1_NATIVE_AGENT_MVP/M1_E5_DOCUMENTATION/: manifest.json
docs/progress_trackings/M1_NATIVE_AGENT_MVP/M1_E6_ASYNC_SCRIPT_LOAD_TIMEOUT/: M1_E6_I1_BACKLOGS.md  M1_E6_I1_TECH_DESIGN.md  (+1 more)
docs/specs/: ARCHITECTURE.md  M1_E5_I2_ARCHITECTURE.md  PERMISSIONS_AND_ENVIRONMENT.md  QUERY_ENGINE_SPEC.md  TRACER_SPEC.md
docs/tech_designs/: NATIVE_TRACER_BACKEND_ARCHITECTURE.md  SHARED_MEMORY_IPC_MECHANISM.md
docs/user_stories/: USER_STORIES.md
plans/M1_ADA_Claude_V1/: milestone.md
plans/M1_ADA_Claude_V1/E1_Happy_Path_Spike/: epic.md
plans/M1_ADA_Claude_V1/E2_Format_Adapter/: epic.md
plans/M1_ADA_Claude_V1/E3_Session_Management/: epic.md
plans/M1_ADA_Claude_V1/E4_Analysis_Pipeline/: epic.md
plans/M1_ADA_Claude_V1/E5_Skills/: epic.md
query_engine/: Cargo.toml  pyproject.toml
query_engine/src/: app.rs  interfaces.py  lib.rs
query_engine/src/atf/: __init__.py  error.rs  errors.py  event.rs  iterator.py  manifest.py  manifest.rs  memory_map.py  mod.rs  reader.py  reader.rs
query_engine/src/handlers/: events.rs  mod.rs  spans.rs  trace_info.rs
query_engine/src/server/: rate_limit.rs  server.rs  types.rs
query_engine/tests/: atf_helpers.py  events_spans_tests.rs  json_rpc_server_coverage_tests.rs  test_atf_reader.py  trace_info_integration.rs  trace_info_tests.rs
query_engine/tests/integration/: test_atf_reader_covfill_integration.py
query_engine/tests/unit/: test_atf_reader_covfill_unit.py
tracer/src/: lib.rs
tracer_backend/: CMakeLists.txt  ada_paths.h.in  build.rs
tracer_backend/docs/: CPP_REFACTORING_GUIDE.md
tracer_backend/include/: thread_registry_cpp.hpp
tracer_backend/src/: lib.rs  registry_selector.rs
tracer_backend/src/agent/: CMakeLists.txt  agent_internal.h  frida_agent.cpp  hook_registry.cpp  module_uuid.cpp
tracer_backend/src/atf/: CMakeLists.txt
tracer_backend/src/backpressure/: CMakeLists.txt  backpressure.cpp
tracer_backend/src/controller/: CMakeLists.txt  frida_controller.cpp  shutdown.c
tracer_backend/src/drain_thread/: CMakeLists.txt  drain_thread.c  drain_thread_private.h
tracer_backend/src/metrics/: formatter.cpp  metrics_reporter.cpp
tracer_backend/src/selective_persistence/: detail_lane_control.cpp
tracer_backend/src/symbol/: CMakeLists.txt  demangler.cpp  dsym_locator_macos.cpp  resolver_macos.cpp  symbol_resolver.cpp  symbol_resolver_internal.h
tracer_backend/src/utils/: CMakeLists.txt  ada_thread.c  ring_buffer.cpp  ring_buffer_private.h  ring_pool.cpp  thread_registry.cpp  tracer_types_private.h
tracer_backend/tests/: CMakeLists.txt
tracer_backend/tests/bench/backpressure/: CMakeLists.txt  bench_backpressure_overhead.cpp
tracer_backend/tests/integration/controller/: test_integration.cpp
tracer_backend/tests/integration/drain_thread/: CMakeLists.txt  test_drain_thread_integration.cpp
tracer_backend/tests/integration/metrics/: test_metrics_integration.cpp
tracer_backend/tests/integration/selective_persistence/: CMakeLists.txt  test_selective_persistence_integration.cpp
tracer_backend/tests/integration/system/: CMakeLists.txt  system_perf_monitor.cpp  system_perf_monitor.h  system_stress_generator.cpp  system_stress_generator.h  system_test_fixture.cpp  system_test_fixture.h  system_trace_constants.h  system_validator.cpp  system_validator.h  test_system_pipeline.cpp
tracer_backend/tests/integration/utils/: test_thread_registry_integration.cpp
tracer_backend/tests/unit/: test_thread_registry_cpp.cpp
tracer_backend/tests/unit/backpressure/: CMakeLists.txt  test_backpressure_state.cpp
tracer_backend/tests/unit/controller/: CMakeLists.txt  test_controller_coverage.cpp  test_signal_shutdown.cpp  test_spawn_method.cpp
tracer_backend/tests/unit/drain_thread/: CMakeLists.txt  test_drain_thread.cpp
tracer_backend/tests/unit/metrics/: CMakeLists.txt  test_metrics_reporter.cpp
tracer_backend/tests/unit/selective_persistence/: CMakeLists.txt  test_coverage_gaps.cpp  test_detail_lane_control.cpp  test_force_coverage.cpp
tracer_backend/tests/unit/utils/: test_control_block_ipc.cpp  test_ring_buffer.cpp  test_thread_registry.cpp
utils/: atf_dump_events.py  atf_trace_viewer.py  compare_registry_performance.sh  distribute.sh  run_coverage.sh  sign_binaries_parallel.sh  sign_binary.sh  sign_binary_fast.sh
utils/coverage_helper/src/: dashboard.rs  main.rs  toolchains.rs
utils/hooks/: post-commit  pre-commit
utils/metrics/: integration_quality.sh
(+110 files in other folders)
