[package]
name = "query_engine"
version = "0.1.0"
edition = "2021"
authors = ["ADA Team"]
description = "Query engine for ADA tracing system - Python bindings"
license = "MIT"

[lib]
name = "query_engine"
# "rlib" for Rust dependencies only - maturin will handle Python extension
crate-type = ["rlib"]

[dependencies]
pyo3 = { version = "0.22", features = ["abi3-py39"], optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "fs", "io-util", "time"] }
async-trait = "0.1"
parking_lot = "0.12"
dashmap = "5"
anyhow = "1.0"
thiserror = "2.0"
lru = "0.12"
md5 = "0.7"
bytes = "1.5"
prost = "0.12"
prost-types = "0.12"

[dev-dependencies]
tempfile = "3.10"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "fs", "io-util", "time"] }

[features]
default = []
python = ["pyo3", "pyo3/extension-module"]
coverage = []  # Enable coverage instrumentation

[profile.release]
lto = true
codegen-units = 1
strip = true
